# rc_data

./: build-preview.sh  data.json  elm-watch.json  elm.json  fetch  fetch.sh  img_compress.py  img_resize.py  keywords.json  rc_data.py  rc_selenium.py  rc_test.py  rcdata.json  readme.md  resize.py  run-local.sh  run.sh  run_server.sh  screenshot-weave-text.py  screenshot.py  screenshots_resize.py  screenshots_resize_json.py  test.sh  toc.json
rc_get/: manage.py  readme.md
rc_get/rc_get/: asgi.py  settings.py  urls.py  views.py  wsgi.py
rc_get/rc_get_app/: apps.py  views.py
rc_parser/: calc_metrics.py  calc_metrics_iterate.py  json2chart.py  json2chart_iterate.py  json2image.py  json2image_iterate.py  rc_data.py  rc_soup_get_pdf.py  rc_soup_iterate.py  rc_soup_main.py  rc_soup_pages.py  rc_soup_tools.py  rc_soup_vis.py  readme.md  vis_expositions.json
rc_parser/mongodb/: json2mongo.py  rcData_API.py  readme.md
screenshot_struct/structure_extract/: dune  dune-project  structure_extract_resized.ml
src/: EnrichedResearch.elm  Extract.elm  Main.elm  ParsedExposition.elm  Research.elm  TestJson.elm  TestView.elm  Toc.elm  WorkerTypes.elm
structure_extract/: dune  dune-project  extract.ml  struct.json
tests/: Example.elm  TestData.elm  TestData.elm~  test1.json
webinar_19_03_2024/: readme.md  recent_posts.py  upload.py
